@@ -4,12 +4,17 @@
  */
 package org.anjocaido.groupmanager.utils;
 
+import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
+import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.io.PrintWriter;
+import java.io.StringWriter;
+import java.text.SimpleDateFormat;
 import java.util.Calendar;
 import java.util.GregorianCalendar;
 import java.util.List;
@@ -17,11 +22,25 @@ import java.util.List;
 import org.anjocaido.groupmanager.GroupManager;
 import org.anjocaido.groupmanager.data.Group;
 
+
 /**
  *
  * @author gabrielcouto
  */
 public abstract class Tasks {
+	
+	/**
+	 * Gets the exception stack trace as a string.
+	 * 
+	 * @param exception
+	 * @return stack trace as a string
+	 */
+	public static String getStackTraceAsString(Exception exception) {
+		StringWriter sw = new StringWriter();
+		PrintWriter pw = new PrintWriter(sw);
+		exception.printStackTrace(pw);
+		return sw.toString();
+	}
 
     public static void copy(InputStream src, File dst) throws IOException {
         InputStream in = src;
@@ -44,6 +63,28 @@ public abstract class Tasks {
         InputStream in = new FileInputStream(src);
         copy(in, dst);
     }
+    
+    /**
+	 * Appends a string to a file
+	 * 
+	 * @param data
+	 * @param file
+	 */
+	public static void appendStringToFile(String data, String file) throws IOException {
+
+		FileWriter outStream = new FileWriter("." + System.getProperty("file.separator") + file, true);
+
+		BufferedWriter out = new BufferedWriter(outStream);
+
+		data.replaceAll("\n", System.getProperty("line.separator"));
+
+		out.append(new SimpleDateFormat("yyyy-MM-dd HH-mm").format(System.currentTimeMillis()));
+		out.append(System.getProperty("line.separator"));
+		out.append(data);
+		out.append(System.getProperty("line.separator"));
+		
+		out.close();
+	}
 
     public static void removeOldFiles(GroupManager gm, File folder) {
         if (folder.isDirectory()) {
